--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <html>
+    <head> 
+        <title>Muttalib Sheriff</title>
+    </head>
     <body>
         <p> Testing if this works :) 
             hopefully will be able to get this working soon.
