changed html for favicon

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
     <head> 
         <title>Muttalib Sheriff</title>
+        <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+        <link rel="icon" href="favicon.ico" type="image/x-icon">
     </head>
     <body>
         <p> Testing if this works :) 
