--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         <title>Muttalib Sheriff</title>
         <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
         <link rel="icon" href="favicon.ico" type="image/x-icon">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <p> Testing if this works :) 
