--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
     <head> 
         <title>Muttalib Sheriff</title>
-        <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-        <link rel="icon" href="favicon.ico" type="image/x-icon">
+        <link rel="shortcut icon" href="icon.ico" type="image/x-icon">
+        <link rel="icon" href="icon.ico" type="image/x-icon">
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
