rejected from man

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
         <p> Testing if this works :) 
             hopefully will be able to get this working soon.
         </p>
+        <p>Ahhhh ! im such a failure !!</p>
     </body>
 </html> 
