testing out live reload

--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
-        <p> Testing if this works :) 
-            hopefully will be able to get this working soon.
-        </p>
-        <p>Ahhhh ! im such a failure !!</p>
+        <h1>Ahhhh ! im such a failure !!</h1>
+            <p> Testing if this works :) 
+            hopefully will be able to get this working soon. Lets see if this works
+            </p> 
+            <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>     
     </body>
 </html> 
