changed html5 standard

--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
+<!DOCTYPE html>
 <html>
     <head> 
         <title>Muttalib Sheriff</title>
         <link rel="shortcut icon" href="icon.ico" type="image/x-icon">
         <link rel="icon" href="icon.ico" type="image/x-icon">
-        <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
             <p> Testing if this works :) 
